--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,19 @@ async-timeout==3.0.1
 attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
+cycler==0.10.0
 idna==2.9
 idna-ssl==1.1.0
+kiwisolver==1.1.0
 mat4py==0.4.2
+matplotlib==3.2.1
 multidict==4.7.5
 numpy==1.18.1
+pyparsing==2.4.6
+python-dateutil==2.8.1
 requests==2.23.0
+scipy==1.4.1
+six==1.14.0
 typing-extensions==3.7.4.1
 urllib3==1.25.8
 yarl==1.4.2
